<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp">

        <TextView
            android:id="@+id/refuelingAverageFuelConsumptionText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/averageFuelConsumption"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@id/refuelingList"
            app:layout_constraintEnd_toStartOf="@id/refuelingAverageFuelConsumptionValue"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/refuelingAverageFuelConsumptionValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@id/refuelingList"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/refuelingAverageFuelConsumptionText"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="0.0" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/refuelingList"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            app:layout_constraintBottom_toTopOf="@id/refuelingAdd"
            app:layout_constraintTop_toBottomOf="@id/refuelingAverageFuelConsumptionText"
            tools:listitem="@layout/list_item_refueling" />

        <Button
            android:id="@+id/refuelingAdd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/refueling_add"
            app:layout_constraintBottom_toTopOf="@id/tripDelete"
            app:layout_constraintTop_toBottomOf="@id/refuelingList" />

        <Button
            android:id="@+id/tripDelete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/trip_delete"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/refuelingAdd" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>